Fixes #11 - added 100px of spacing at end of page

--- a/public/css/audience/about/about.css
+++ b/public/css/audience/about/about.css
@@ -21,3 +21,7 @@
 	.voices-audience-about-the-issue-text {
 		padding: 10px 75px 75px 350px;
 	}
+
+.voices-audience-about-footer-placeholder {
+	height: 100px;
+}
